--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "@quasar/extras": "^1.17.0",
     "axios": "^1.9.0",
     "datetimerangepicker": "github:flespi-software/DateTimeRangePicker",
-    "flespi-io-js": "git+ssh://git@git.gurtam.net:flespi/frontend/flespi-io-js.git",
+    "flespi-io-js": "git+https://github.com/flespi-software/flespi-io-js.git",
     "leaflet": "^1.9.4",
     "leaflet-geometryutil": "^0.10.3",
     "leaflet.marker.slideto": "^0.2.0",
     "leaflet.polylinemeasure": "github:ppete2/Leaflet.PolylineMeasure#9908e5a",
     "pinia": "^3.0.2",
     "quasar": "^2.18.1",
-    "qvirtualscroll": "git+ssh://git@git.gurtam.net:flespi/frontend/QVirtualScroll.git#vue3",
+    "qvirtualscroll": "git+https://github.com/flespi-software/QVirtualScroll.git#vue3",
     "vue": "^3.5.14",
     "vue-i18n": "^11.1.3",
     "vue-router": "^4.5.1"
