--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "leaflet": "^1.9.4",
     "leaflet-geometryutil": "^0.10.3",
     "leaflet.marker.slideto": "^0.2.0",
+    "leaflet.markercluster": "^1.5.3",
     "leaflet.polylinemeasure": "github:ppete2/Leaflet.PolylineMeasure#9908e5a",
     "pinia": "^3.0.2",
     "quasar": "^2.18.1",
