--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "track-it",
   "version": "3.1.0",
-  "description": "A simple application based on flespi.io and built with Quasar and Leaflet.js. Allows tracking different devices on the map, viewing telemetry messages for these devices.",
-  "productName": "TrackIt!",
+  "description": "Control your fleet from anywhere. Real-time GPS tracking, detailed route reports, security alerts, and comprehensive vehicle operation analysis.",
+  "productName": "FleetTracker 360",
   "capacitorId": "com.flespi.trackit",
   "author": "Sergey Buntsevich <scarry92@yandex.ru>",
   "type": "module",
